--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ pickleshare==0.7.5
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
 Pygments==2.7.2
+python-dateutil==2.8.1
+six==1.15.0
 traitlets==5.0.5
 wcwidth==0.2.5
