--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 backcall==0.2.0
+cycler==0.10.0
 decorator==4.4.2
 ipython==7.19.0
 ipython-genutils==0.2.0
 jedi==0.17.2
+kiwisolver==1.3.1
+matplotlib==3.3.3
+numpy==1.19.4
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.0.1
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
 Pygments==2.7.2
+pyparsing==2.4.7
 python-dateutil==2.8.1
 six==1.15.0
 traitlets==5.0.5
