--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ jedi==0.17.2
 kiwisolver==1.3.1
 matplotlib==3.3.3
 numpy==1.19.4
+pandas==1.1.4
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -16,6 +17,7 @@ ptyprocess==0.6.0
 Pygments==2.7.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
+pytz==2020.4
 six==1.15.0
 traitlets==5.0.5
 wcwidth==0.2.5
